Spacing fix

--- a/assets/sass/atoms/_portraits.scss
+++ b/assets/sass/atoms/_portraits.scss
@@ -7,7 +7,6 @@
 	height: 120px;
 	display: block;
 	background: $white;
-  margin-bottom: -20px;
 
 	img{
 		width: 100%;
