--- a/assets/sass/molecules/_covers.scss
+++ b/assets/sass/molecules/_covers.scss
@@ -8,6 +8,7 @@
 .cover-container{
   .portrait-container{
     transform:translateY(-50%);
+    margin-bottom: -50px;
     .placeholder {
       border-width: 3px;
       .ehnvicon {
